SIT305 Assignment 2 - World Quiz

22/05/2020:
- Connecting the app to Google Firebase
- Building login function
- Building signup fragment and storing user's identity on firebase

24/05/2020:
- Creating email verification for account.
- User will username which has email verification to access the app
- Improving the Sign-up dialog: adding progress bar and field requirements. 

26/05/2020
- Singing up use email and password for users' identities (Firebase sign up method). User still need username for more convenience in logging in.
- User type the username and the database will check if the related email is sign up or not. 
- Eliminate storing password on the firebase database for user's privacy.

27/05/2020
- Adding database to the app (EDMTQuiz2019.db) including categories and questions for each categories and building DBHelper for calling out all the categories in the database
- Designing and decorating layout for category item.
- Building Category Adapter for the Category list

28/05/2020
- Designing Question Activity for each category when being clicked:
	+ Question Activity
	+ Category Item Layout
	+ Answer sheet Item Grid Layout
	+ Answer Sheet Adapter
	+ Content question and App bar question layout: showing all the right, wrong and unanswered questions.
	+ Creating function that helps calling out the questions from the category's questions and answers
	+ Creating Current question and Question model that can get the answer of questions and question types for each category.
- Adding progress bar for login function.

