@@ -37,7 +37,7 @@ public class AnswerSheetAdapter extends RecyclerView.Adapter<AnswerSheetAdapter.
             holder.question_item.setBackgroundResource(R.drawable.grid_question_right_answer);
         else if (currentQuestionList.get(position).getType() == Common.ANSWER_TYPE.WRONG_ANSWER)
             holder.question_item.setBackgroundResource(R.drawable.grid_question_wrong_answer);
-        else
+        else if (currentQuestionList.get(position).getType() == Common.ANSWER_TYPE.NO_ANSWER)
             holder.question_item.setBackgroundResource(R.drawable.grid_question_no_answer);
 
     }
