@@ -13,4 +13,6 @@
     <string name="menu_slideshow">Slideshow</string>
 
     <string name="home_second">Home Second</string>
+    <string name="Sorry">Sorry</string>
+    <string name="NoQuestion">We are preparing questions for this category</string>
 </resources>
